@@ -1,4 +1,5 @@
 current SVN version
+	Added support for retina display
 
 version 1.1.4 (2011-03-31)
 	Isgl3dColorUtil: fix bug in returning rgb and rgba hex strings
